--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,19 @@
-libmeegotouch (0.20.20~1) UNRELEASED; urgency=low
+libmeegotouch (0.20.20-1) unstable; urgency=low
 
+  * Fixes: NB#172712 - Moving action to menu does not work
+  * Fixes: NB#169208 - MInfoBanner disappear animation is executed when...
+  * Fixes: NB#174516 - Switching between month, multiday, list and tasks views returns black window
+  * Fixes: NB#167102 - Don't forcefully drop all style-references in ~MTheme
+  * Fixes: NB#170968 - Navigation bar times out even when the view menu options are displayed
+  * Fixes: NB#173599 - Switch does not work with right-to-left swipe, only with left-to-right
+  * Fixes: NB#174084 - Application menu doesn't appear when scene window transitions are immediate
+  * Fixes: NB#173416 - setting gconf value for /meegotouch/theme/name only works once
+  * Fixes: NB#174281 - MComboBox emits currentIndexChanged(int) prematurely
+  * Fixes: NB#172567 - Phone application is not usable when View Menu is opened and closed multiple times
   * Fixes: NB#169509 - info note is truncated in portrait mode
-  * Fixes: NB#171531 -  Info banner is not dismissed
+  * Fixes: NB#171531 - Info banner is not dismissed
 
- -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Thu, 17 Jun 2010 13:30:27 +0300
+ -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Fri, 18 Jun 2010 10:21:44 +0300
 
 libmeegotouch (0.20.19-1) unstable; urgency=low
 
