--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.19.1-1) unstable; urgency=low
+
+  * Fixes: NB#175507, Crash is observed when tapped outside 'camera mode' pop up.
+
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Mon, 21 Jun 2010 11:54:04 +0300
+
 libmeegotouch (0.20.19-1) unstable; urgency=low
 
   * Fixes: NB#174469 - widgetsgallery -quitimmediately stuck
