--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libmeegotouch (0.20.22-1) unstable; urgency=low
+
+  * Fixes: NB#173390 - Half tool bar displayed
+  * Fixes: NB#170883 - No enter/exitDisplayEvent() methods called for a widget inside system modal dialog
+  * Fixes: NB#175977 - MLabelViewSimple - restore clipping state after setting it
+
+ -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Tue, 22 Jun 2010 14:56:34 +0300
+
 libmeegotouch (0.20.21-1) unstable; urgency=low
 
   * Fixes: NB#175502 - MList creates WAY too many items
