Changes: Icon IDs update according meegotouchtheme RevBy: TuomasK Details: some icons has changed the name, old invalid IDs stayed in code and sometimes cause problems..

--- a/doc/src/appletdevelopment.dox
+++ b/doc/src/appletdevelopment.dox
@@ -99,7 +99,7 @@ Following is an example of applet metadata specification:
 [Desktop Entry]
 Type=X-MeeGoApplet
 Name=ExampleApplet
-Icon=Icon-music
+Icon=icon-l-music
 Exec=duiappletrunner
 
 [X-MeeGoApplet]
