--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.23~1) UNRELEASED; urgency=low
+
+  * ...
+
+ -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Wed, 23 Jun 2010 14:42:41 +0300
+
 libmeegotouch (0.20.22-1) unstable; urgency=low
 
   * Fixes: NB#166466 - Position indicator partially hidden behind titlebar
