Fixes: NB#175847 -  MPannableArea does not work inside an MApplicationPage
RevBy: Daniel D'Andrada
Details: moving the pan gesture handler from glass to the pannable widget and
recognizing pan gesture from scene mouse position (workaround for qt's bug).
This enables broken use case of "pannable viewport inside pannable viewport"
where both viewports were enabled.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -2,12 +2,14 @@
 
 \section v02030 0.20.30
 
+- Fixed NB#175847: MPannableArea does not work inside an MApplicationPage
+
 \subsection New
 - MGridItem is deprecated, please use MContentItem, MBasicListItem, MAdvancedListItem, MDetailedListItem
 
 \section v02028 0.20.28
 
-- Fixed NB#176700: Black text on black buttons, fixed in blanco theme
+- Fixed NB#176700: Labels are not visible in QtStyle Dialog Test and QtStyle Example apps until button is tapped
 
 \subsection New
 - Added a small demo application which demonstrates how to use the orientation change support in meegotouch Qt style
