Fixes: NB#175663 - system dialog cannot be minimised
RevBy: Marcin Miklas, Tomas Junnonen
Details: Introducing system property for MDialog. It enables
creating System Dialogs that are modeless (when modal property
is set to false). The difference between System Dialog and System
Modal Dialog is that the former is equipped with the home button
that allows skipping the dialog temporarily and later invoking
it from the task switcher.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -13,6 +13,9 @@
 
 \subsection New
 - videoGlobalAlpha property in MWindow.
+- systemModal property in MDialog split to system and modal properties. System Dialog
+  (in contrast to System Modal Dialog) provides a home button and can be skipped
+  (minimized). Once skipped, it's accessible from the task switcher.
 
 \section v02020 0.20.20
 
