--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.25-2) unstable; urgency=low
+
+  * Move -dev packages to build-deps
+
+ -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Tue, 06 Jul 2010 14:58:26 +0300
+
 libmeegotouch (0.20.25-1) unstable; urgency=low
 
   * Fixes: NB#178001 - using MList::scrollTo() makes the list behave strange
