--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.27~1) UNRELEASED; urgency=low
+
+  * 
+
+ -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Fri, 09 Jul 2010 10:53:25 +0300
+
 libmeegotouch (0.20.26-1) unstable; urgency=low
 
   * Fixes: NB#158821 - dui-servicefwgen should allow generation of namespaced code
