Fixes: NB#173533 - Font setting does not support italic/bold
RevBy: Tomas Junnonen
Details: Added support for capitalization and italic parameters for
         a font CSS attribute type.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,11 @@
 /*! \page news What's New in DirectUI
 
+\section v02027 0.20.27
+
+\subsection New
+- Support for capitalization and italic styling for the font CSS attributes. New syntax goes as follows:
+  "font: family [light|normal|demibold|bold|black] [italic] [mixedcase|uppercase|lowercase|smallcaps|capitalize] size;"
+
 \section v02024 0.20.24
 
 - Automatic orientation changes have been disabled. Now the GUI orientation
