--- a/doc/src/styling.dox
+++ b/doc/src/styling.dox
@@ -29,10 +29,10 @@ DirectUI provides a powerful styling engine for applications to customize their 
           to the requirements.
 
 \section links Documentation links 
-    \li <a href="styling_concepts.html">Basic concepts of styling</a>
-    \li <a href="styling_features.html">Features</a>
-    \li <a href="styling_support.html">Styling support for applications & external libraries</a>
-    \li <a href="styling_stylesheets.html">Stylesheet syntax reference & examples</a>
-    \li <a href="styling_in_code.html">Architecture & code examples</a>
+    \li <a href="styling__concepts.html">Basic concepts of styling</a>
+    \li <a href="styling__features.html">Features</a>
+    \li <a href="styling__support.html">Styling support for applications & external libraries</a>
+    \li <a href="styling__stylesheets.html">Stylesheet syntax reference & examples</a>
+    \li <a href="styling__in__code.html">Architecture & code examples</a>
 
 */
